Update - the createUser endpoint with historyData
- We can now pass in an optional body with existing entries.
